refactor: remove retry_after field from login responses
Frontend will use locked_until datetime for countdown calculation
